# elec

./: CMakeLists.txt  INSTALL  README.md
examples/: CMakeLists.txt  example-001.cpp  example-002.cpp
src/: CMakeLists.txt  elec.hpp  elecArea.hpp  elecDipole.hpp  elecMain.hpp  elecParams.hpp  elecParticle.hpp  elecPoint.hpp  elecWorld.hpp
tests/: CMakeLists.txt  test-001.cpp  test-002.cpp  test-003.cpp
